# kgEngine-2.0

./: .gitignore  Animation-Structure.txt  Blueprint-Entity.txt  Blueprint-Entity2.txt  Blueprint-Entity3.blueprint  Blueprint-Values.txt  Package-Structure.structure  Package-Structure.txt  Roadmap.ods  Save-Structure.txt  kgEngine-2.0UML.eap  license.txt  temp_todo.txt
Notes/: Blueprint-Entity3.blueprint  Save-Structure.txt
Project/: build.bat  build_dependencies.bat  build_project.bat  build_project_solution_only.bat  delete_cache.bat  install.bat  liblist.txt
Project/NewBit/: CMakeLists.txt
Project/NewBit/include/NewBit/: BlueprintValueReadErrorException.h  Callback.h  ComponentManager.h  ComponentMissingException.h  Console.h  Entity.h  EntityFactory.h  EntityManager.h  GameState.h  InputManager.h  PathNotAvailableException.h  PauseLock.h  PluginManager.h  PluginRegistrationException.h  PluginRequestException.h  ResourceManager.h  SaveManager.h  System.h  SystemManager.h  WrongCallbackSignatureException.h  id_internal.h  sfml_vector_extension.h  stdafx.h
Project/NewBit/include/TileMapGame/: AnimationComponent.h  Camera.h  CameraComponent.h  Chunk.h  ChunkGeneratorSystem.h  ChunkIOOperation.h  ChunkSystem.h  DefaultGameState.h  DrawingLayer.h  DrawingLayerContainer.h  GraphicsComponent.h  GraphicsSystem.h  Position.h  SingleplayerGameState.h  Transformation.h  TransformationComponent.h  WorldGeneratorManager.h  constants.h  id.h
Project/NewBit/src/NewBit/: Callback.cpp  EntityFactory.cpp  EntityManager.cpp  PluginManager.cpp  RandomNumberGenerator.cpp  SaveComponent.cpp  SaveManager.cpp  World.cpp  main.cpp  sfml_vector_extension.cpp
Project/NewBit/src/TileMapGame/: AnimationComponent.cpp  CameraComponent.cpp  Chunk.cpp  ChunkContainer.cpp  ChunkGeneratorSystem.cpp  ChunkIOOperation.cpp  ChunkSystem.cpp  ChunkVBO.cpp  ConsoleGameState.cpp  DrawingLayer.cpp  DrawingLayerContainer.cpp  GraphicsComponent.cpp  GraphicsSystem.cpp  SingleplayerGameState.cpp  Transformation.cpp  TransformationComponent.cpp  connect.cpp
kgEngine-2.0/: kgEngine-2.0.sln
kgEngine-2.0/SFML-Visual_Studio2013x32/doc/: sfml.chm
kgEngine-2.0/SFML-Visual_Studio2013x32/doc/html/: AlResource_8hpp_source.html  Audio_2Export_8hpp_source.htm  Audio_2Export_8hpp_source.html  Audio_8hpp_source.htm  Audio_8hpp_source.html  BlendMode_8hpp_source.htm  BlendMode_8hpp_source.html  CircleShape_8hpp_source.htm  CircleShape_8hpp_source.html  (+534 more)
kgEngine-2.0/SFML-Visual_Studio2013x32/lib/: sfml-audio-d.lib  sfml-audio-s-d.lib  sfml-audio-s.lib  sfml-audio.lib  sfml-graphics-d.lib  sfml-graphics-s.lib  sfml-graphics.lib  sfml-main-d.lib  sfml-main.lib  sfml-network-d.lib  sfml-network-s-d.lib  sfml-network-s.lib  sfml-network.lib  sfml-system-d.lib  sfml-system-s-d.lib  sfml-system-s.lib  sfml-system.lib  sfml-window-d.lib  sfml-window-s-d.lib  sfml-window-s.lib  sfml-window.lib
kgEngine-2.0/Testproject/: Blueprint.cpp  Blueprint.h  Testproject.vcxproj  Testproject.vcxproj.filters  main.cpp  stdafx.h  test.blueprint  test2.blueprint
kgEngine-2.0/TileMapGame/: Animation.cpp  Animation.h  AnimationComponent.cpp  AnimationComponent.h  AnimationSystem.cpp  AnimationSystem.h  BoundingBox.cpp  BoundingBox.h  Camera.cpp  Camera.h  Chunk.cpp  Chunk.h  ChunkContainer.cpp  ChunkContainer.h  ChunkGenerator.cpp  ChunkGenerator.h  ChunkGeneratorSystem.cpp  ChunkGeneratorSystem.h  ChunkIOOperation.cpp  ChunkIOOperation.h  ChunkIOOperationQueue.cpp  ChunkIOOperationQueue.h  ChunkLoadingOperation.cpp  ChunkLoadingOperation.h  ChunkLoadingOperationQueue.h  ChunkPosition.h  ChunkSystem.cpp  ChunkSystem.h  ChunkVBO.h  ConsoleGameState.cpp  ConsoleGameState.h  DefaultGameState.cpp  DefaultGameState.h  DrawingLayer.cpp  DrawingLayer.h  DrawingLayerContainer.cpp  DrawingLayerContainer.h  Game.cpp  Game.h  GameController.cpp  (+36 more)
kgEngine-2.0/_libraries/: libraries.txt
kgEngine-2.0/_libraries/lib/: libboost_atomic-vc140-mt-1_58.lib  libboost_atomic-vc140-mt-gd-1_58.lib  libboost_chrono-vc140-mt-1_58.lib  libboost_chrono-vc140-mt-gd-1_58.lib  libboost_container-vc140-mt-1_58.lib  libboost_container-vc140-mt-gd-1_58.lib  libboost_context-vc140-mt-1_58.lib  libboost_context-vc140-mt-gd-1_58.lib  libboost_coroutine-vc140-mt-1_58.lib  libboost_coroutine-vc140-mt-gd-1_58.lib  libboost_date_time-vc140-mt-1_58.lib  libboost_date_time-vc140-mt-gd-1_58.lib  libboost_exception-vc140-mt-1_58.lib  libboost_exception-vc140-mt-gd-1_58.lib  libboost_filesystem-vc140-mt-1_58.lib  libboost_iostreams-vc140-mt-1_58.lib  libboost_iostreams-vc140-mt-gd-1_58.lib  libboost_math_c99-vc140-mt-1_58.lib  libboost_math_c99-vc140-mt-gd-1_58.lib  libboost_math_c99f-vc140-mt-1_58.lib  libboost_math_c99f-vc140-mt-gd-1_58.lib  libboost_math_c99l-vc140-mt-1_58.lib  libboost_math_c99l-vc140-mt-gd-1_58.lib  libboost_prg_exec_monitor-vc140-mt-1_58.lib  libboost_prg_exec_monitor-vc140-mt-gd-1_58.lib  libboost_random-vc140-mt-1_58.lib  libboost_random-vc140-mt-gd-1_58.lib  libboost_signals-vc140-mt-1_58.lib  libboost_system-vc140-mt-1_58.lib  libboost_system-vc140-mt-gd-1_58.lib  libboost_thread-vc140-mt-1_58.lib  libboost_thread-vc140-mt-gd-1_58.lib  libboost_timer-vc140-mt-1_58.lib  libboost_timer-vc140-mt-gd-1_58.lib  tgui-d.lib  tgui.lib  thor-d.lib  thor.lib
kgEngine-2.0/kgEngine-2.0/: Blueprint.cpp  Blueprint.h  BlueprintValueReadErrorException.h  Callback.cpp  Callback.h  ClassDiagram.cd  Component.h  ComponentManager.cpp  ComponentManager.h  ComponentMissingException.h  ConfigFile.cpp  ConfigFile.h  Console.cpp  Core.cpp  Core.h  Engine.h  Entity.cpp  Entity.h  EntityContainer.cpp  EntityContainer.h  EntityFactory.cpp  EntityFactory.h  EntityManager.cpp  EntityManager.h  EntityThatHasComponentContainer.h  GameState.cpp  GameState.h  GameStateManager.cpp  GameStateManager.h  InputManager.cpp  InputManager.h  Interpreter.h  PathNotAvailableException.h  PauseLock.cpp  Plugin.h  PluginFactory.h  PluginManager.cpp  PluginManager.h  PluginRegistrationException.h  PluginRequestException.h  (+31 more)
kgEngine-2.0/kgEngine-2.0/Config/: ChunkSystem.ini  GraphicsSystem.ini
(+24 files in other folders)
